--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,37 @@
 /* ===GENERAL=== */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 /* ===HEADER=== */
+.header {
+  width: 100%;
+  height: 100px;
+  background-image: url(/assets/images/);
+  background-size: cover;
+}
+.navbar {
+  width: 100%;
+  padding: 20px;
+  position: fixed;
+  top: 0px;
+  transition: 0.5s;
+}
+.navbar ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px 50px;
+  color: white;
+  font-size: 24px;
+  font-family: sans-serif;
+  cursor: pointer;
+}
+
+.navbar ul li:hover{
+background:orange,
+}
+
 /* ===MAIN=== */
 
 /* ===FOOTER=== */
