--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-<<<<<<< HEAD
-=======
 
 body {
   font-size: 18px;
@@ -16,18 +14,17 @@ body {
   margin: auto;
 }
 
->>>>>>> 4f31a920f992ebc3aa0c74592fbdb85435085e09
 /* ===HEADER=== */
 
 /* ===MAIN=== */
 .fox-image {
-  background: url("../assets/image/fox.jpeg");
   background-size: cover;
   width: 100%;
   height: 700px;
   position: relative;
   display: flex;
   justify-content: center;
+  background-image: url("../assets/image/fox.jpeg");
 }
 .fox-image:after {
   content: "";
@@ -62,7 +59,6 @@ body {
   font-size: 14pt;
 }
 
-<<<<<<< HEAD
 .how-you-can-help {
   display: flex;
   justify-content: center;
@@ -92,8 +88,6 @@ body {
   font-size: 14pt;
 }
 
-/* ===FOOTER=== */
-=======
 /* DEAN ========================================== */
 
 h2 {
@@ -124,11 +118,11 @@ hr {
 }
 
 .change:hover .change__body a {
-  border-bottom: 2px solid #009ED0;
+  border-bottom: 2px solid #009ed0;
 }
 
 .change:hover .fa-arrow-right {
-  color: #009ED0;
+  color: #009ed0;
 }
 
 .change .change__top img {
@@ -152,7 +146,7 @@ hr {
 }
 
 .change .change__bottom {
-  color: #243E86;
+  color: #243e86;
   padding: 0 15px;
 }
 
@@ -175,7 +169,7 @@ hr {
 }
 
 .gift:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   bottom: 0;
@@ -209,7 +203,7 @@ hr {
 }
 
 .gift__link:hover {
-  background-color: #C83021;
+  background-color: #c83021;
   transition-delay: 0.1s;
 }
 
@@ -229,7 +223,7 @@ hr {
 }
 
 .news__information::before {
-  content: '';
+  content: "";
   background-image: url(../assets/image/coyote.png);
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -269,9 +263,8 @@ hr {
 }
 
 .news__link:hover {
-  background-color: #008EBB;
+  background-color: #008ebb;
   transition-delay: 0.1s;
 }
 
 /* ===FOOTER=== */
->>>>>>> 4f31a920f992ebc3aa0c74592fbdb85435085e09
