--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,37 @@
 /* ===GENERAL=== */
+@import url("https://fonts.googleapis.com/css?family=Inconsolata:700");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 /* ===HEADER=== */
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+body {
+  background: #252525;
+}
 .header {
   width: 100%;
-  height: 100px;
-  background-image: url(/assets/images/dog.jpeg);
+  height: 1500px;
+  background: url(/assets/images/dog.jpeg);
   background-size: cover;
+  display: flex;
+  flex-wrap: wrap;
 }
 .navbar {
-  width: 100%;
+  width: 50%;
   padding: 20px;
-  position: fixed;
   top: 0px;
   transition: 0.5s;
+  text-align: center;
+}
+.navbar a {
+  color: white;
+  text-decoration: none;
 }
 .navbar ul li {
   list-style-type: none;
@@ -30,6 +45,93 @@
 
 .navbar ul li:hover {
   background: orange;
+}
+.btn {
+  float: right;
+  margin-top: 30px;
+  width: 50%;
+}
+.donate-btn {
+  color: white;
+  background-color: red;
+  font-size: 28px;
+  padding: 10px 60px 10px 60px;
+  text-decoration: none;
+  border-radius: 5px;
+  float: right;
+}
+
+.container {
+  position: absolute;
+  left: 50%;
+  top: 45%;
+  transform: translate(-50%);
+}
+.search-box input {
+  border: none;
+  background: none;
+  z-index: 1;
+  width: 25px;
+  height: 25px;
+  transition: all 0.25s ease-in 0.25s;
+  color: transparent;
+  font-size: 1em;
+  line-height: 25px;
+}
+
+.search-box input:hover {
+  cursor: pointer;
+}
+
+.search-box input:hover:focus {
+  cursor: text;
+}
+
+.search-box input:hover + span {
+  background: rgba(255, 255, 255, 2);
+}
+
+.search-box input:focus {
+  width: 200px;
+  padding: 0 10px;
+  outline: none;
+  color: black;
+  background: none;
+  color:red;
+}
+
+.search-box input:focus + span {
+  width: 200px;
+}
+
+.search-box input:focus + span::before {
+  width: 2px;
+  opacity: 0;
+  transition: all 0.25s ease-in;
+}
+
+.search-box input + span {
+  z-index: -1;
+  position: absolute;
+  border: 2px solid #fff;
+  top: 0;
+  width: 25px;
+  height: 25px;
+  transition: all 0.25s ease-in 0.25s;
+  border-radius: 25px;
+  left: 0;
+}
+
+.search-box input + span::before {
+  transition: all 0.25s ease-in 0.25s;
+  transform-origin: left top;
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 5px;
+  border-radius: 5px;
+  background: #fff;
+  transform: rotate(45deg) translate(26px, -2px);
 }
 
 /* ===MAIN=== */
