--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,6 @@ body {
   width: 100%;
   height: 700px;
   position: relative;
-  display: flex;
-  justify-content: center;
   background-image: url("../assets/image/fox.jpeg");
 }
 .fox-image:after {
@@ -47,8 +45,9 @@ body {
   z-index: 1;
   position: relative;
   display: flex;
-
-  /*align-items: center;*/
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
   margin-left: 6%;
   margin-right: 6%;
 }
@@ -60,6 +59,13 @@ body {
   text-decoration: none;
   font-family: "freight-sans-pro", sans-serif;
   font-size: 14pt;
+}
+.text-box1-link .fa-arrow-right {
+  color: #009ed0;
+}
+
+.text-box1-link:hover {
+  color: 2px solid #009ed0;
 }
 
 .how-you-can-help {
