--- a/css/style.css
+++ b/css/style.css
@@ -100,14 +100,17 @@ body {
 
 /* DEAN ========================================== */
 
-h2 {
-  text-align: center;
+hr {
+  border: 3px solid #BEC3C6;
+  width: 52px;
+  margin: 25px auto;
 }
 
-hr {
-  border: 2px solid lightgrey;
-  width: 60px;
-  margin: 25px auto;
+.changes__text {
+  text-align: center;
+  font-size: 35px;
+  color: #243e86;
+  font-weight: 400;
 }
 
 .changes {
@@ -170,16 +173,14 @@ hr {
 /* GIFT ========================================== */
 
 .gift {
+  width: 100%;
   background-image: url("../assets/image/bigcat.jpg");
   background-size: cover;
-  padding: 150px 0;
-  margin: 60px 0;
-  color: white;
   position: relative;
 }
 
 .gift:after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   bottom: 0;
@@ -190,11 +191,17 @@ hr {
 }
 
 .text-wrapper {
-  max-width: 500px;
-  margin: auto;
-  z-index: 1;
+  color: white;
+  width: 50%;
+  margin: 60px auto;
   position: relative;
   text-align: center;
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 150px 30px;
+  z-index: 1;
 }
 
 .gift__title {
@@ -218,8 +225,9 @@ hr {
 }
 
 .gift__btn {
-  margin-top: 50px;
+  margin-top: 30px;
 }
+
 
 /* ARTICLE ========================================== */
 
@@ -305,6 +313,11 @@ article {
   .news__information {
     margin-right: 7%;
   }
+
+  .text-wrapper {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 @media screen and (max-width: 992px) {
@@ -317,6 +330,14 @@ article {
   .news__information {
     margin-right: 2%;
   }
+
+  .gift:after {
+    height: 100%;
+  }
+
+  .text-wrapper {
+    padding: 100px 20px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -324,8 +345,28 @@ article {
     display: none;
   }
 
+  .news__container {
+    min-height: 320px;
+  }
+
   .news__information {
     width: 100%;
     margin: auto;
+    padding: 20px 20px 10px 20px;
+  }
+
+  .gift {
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .text-wrapper {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .gift__title {
+    font-size: 35px;
   }
 }
