--- a/css/style.css
+++ b/css/style.css
@@ -100,17 +100,14 @@ body {
 
 /* DEAN ========================================== */
 
-hr {
-  border: 3px solid #BEC3C6;
-  width: 52px;
-  margin: 25px auto;
+h2 {
+  text-align: center;
 }
 
-.changes__text {
-  text-align: center;
-  font-size: 35px;
-  color: #243e86;
-  font-weight: 400;
+hr {
+  border: 2px solid lightgrey;
+  width: 60px;
+  margin: 25px auto;
 }
 
 .changes {
@@ -173,14 +170,16 @@ hr {
 /* GIFT ========================================== */
 
 .gift {
-  width: 100%;
   background-image: url("../assets/image/bigcat.jpg");
   background-size: cover;
+  padding: 150px 0;
+  margin: 60px 0;
+  color: white;
   position: relative;
 }
 
 .gift:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   bottom: 0;
@@ -191,17 +190,11 @@ hr {
 }
 
 .text-wrapper {
-  color: white;
-  width: 50%;
-  margin: 60px auto;
+  max-width: 500px;
+  margin: auto;
+  z-index: 1;
   position: relative;
   text-align: center;
-  display: flex; 
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 150px 30px;
-  z-index: 1;
 }
 
 .gift__title {
@@ -225,9 +218,8 @@ hr {
 }
 
 .gift__btn {
-  margin-top: 30px;
+  margin-top: 50px;
 }
-
 
 /* ARTICLE ========================================== */
 
@@ -313,11 +305,6 @@ article {
   .news__information {
     margin-right: 7%;
   }
-
-  .text-wrapper {
-    padding-left: 0;
-    padding-right: 0;
-  }
 }
 
 @media screen and (max-width: 992px) {
@@ -330,14 +317,6 @@ article {
   .news__information {
     margin-right: 2%;
   }
-
-  .gift:after {
-    height: 100%;
-  }
-
-  .text-wrapper {
-    padding: 100px 20px;
-  }
 }
 
 @media screen and (max-width: 768px) {
@@ -345,28 +324,8 @@ article {
     display: none;
   }
 
-  .news__container {
-    min-height: 320px;
-  }
-
   .news__information {
     width: 100%;
     margin: auto;
-    padding: 20px 20px 10px 20px;
-  }
-
-  .gift {
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-
-  .text-wrapper {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .gift__title {
-    font-size: 35px;
   }
 }
