--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,15 @@ body {
 /* ===HEADER=== */
 
 /* ===MAIN=== */
+
 .fox-image {
+  width: 100%;
+  background-image: url("../assets/image/fox.jpg");
+  background-position: top;
   background-size: cover;
-  height: 700px;
   position: relative;
-  background-image: url("../assets/image/fox.jpeg");
 }
+
 .fox-image:after {
   content: "";
   position: absolute;
@@ -32,6 +35,7 @@ body {
   display: block;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
 .text-box1 {
   font-family: "freight-sans-pro", sans-serif;
   font-style: normal;
@@ -39,40 +43,46 @@ body {
   font-size: 24pt;
   line-height: 1.6;
   color: white;
-  height: 700px;
+  padding: 300px 0;
   z-index: 1;
   position: relative;
   display: flex;
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  text-align: center;
+  width: 100%;
 }
+
 .text-box1-link {
   color: white;
   text-decoration: none;
   font-size: 13pt;
   letter-spacing: 1.5px;
 }
+
 .text-box1-link:hover {
   color: #009ed0;
 }
+
 .text-box1-link .fa-arrow-right {
   color: #009ed0;
 }
+
 .how-you-can-help {
   max-width: 1100px;
   display: flex;
-  justify-content: center;
   margin: 3% auto;
   background-color: white;
 }
+
 .happy-dog {
   width: 70%;
 }
+
 #happydog-img {
   width: 100%;
 }
+
 .text-box2 {
   width: 30%;
   font-size: 20pt;
@@ -80,24 +90,32 @@ body {
   line-height: 1.2;
   font-family: "freight-sans-pro", sans-serif;
   align-self: center;
-  margin-left: 2%;
+  margin-left: 4%;
 }
+
 .text-box2-link {
   color: #243e86;
   text-decoration: none;
   font-size: 14pt;
 }
+
 .text-box2-link:hover {
   color: #009ed0;
 }
+
 .text-box2-link .fa-arrow-right {
   color: #009ed0;
 }
+.box2-link {
+  margin: 4% 0;
+}
 .kitty-and-puppy {
   display: flex;
-  height: 520px;
+  flex-wrap: wrap;
   position: relative;
+  margin-bottom: 40px;
 }
+
 .kitty-and-puppy:after {
   content: "";
   position: absolute;
@@ -108,58 +126,63 @@ body {
   display: block;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
 .kitty {
   width: 50%;
+  padding: 50px 0;
   background-size: cover;
   background-image: url(../assets/image/kitty.jpg);
 }
+
 .puppy {
   width: 50%;
+  padding: 80px 0;
   background-size: cover;
   background-image: url(../assets/image/puppyincage.jpg);
 }
+
 .text-box-kitty {
   font-family: "freight-sans-pro", sans-serif;
   font-style: normal;
   font-size: 19pt;
   line-height: 1.5;
-  margin-bottom: 1rem;
   color: white;
-  height: 520px;
   z-index: 1;
   position: relative;
   display: flex;
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  text-align: center;
   margin-right: 16%;
   margin-left: 16%;
+  margin-top: 30px;
 }
+
 .text-box-kitty p {
   margin: 8% 0 8% 0;
 }
+
 .text-box-puppy {
   font-family: "freight-sans-pro", sans-serif;
   font-style: normal;
   font-size: 19pt;
   line-height: 1.5;
-  margin-bottom: 1rem;
   color: white;
-  height: 520px;
   z-index: 1;
   position: relative;
   display: flex;
   flex-direction: column;
-  text-align: center;
   justify-content: center;
   text-align: center;
   margin-right: 16%;
   margin-left: 16%;
+  margin-bottom: 30px;
 }
+
 .text-box-puppy p {
   margin: 8% 0 8% 0;
 }
+
 .kitty-button a {
   color: white;
   font-size: 13pt;
@@ -170,9 +193,11 @@ body {
   border-radius: 3px;
   background-color: #009ed0;
 }
+
 .kitty-button a:hover {
   background-color: #078ebb;
 }
+
 .puppy-button a {
   color: white;
   font-size: 13pt;
@@ -183,18 +208,21 @@ body {
   border-radius: 3px;
   background-color: #d83c2d;
 }
+
 .puppy-button a:hover {
   background-color: #c83021;
 }
+
 h3 {
   color: #d7ae18;
   font-size: 15pt;
   letter-spacing: 4px;
 }
+
 /* DEAN ========================================== */
 
 hr {
-  border: 3px solid #BEC3C6;
+  border: 3px solid #bec3c6;
   width: 52px;
   margin: 25px auto;
 }
@@ -273,7 +301,7 @@ hr {
 }
 
 .gift:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   bottom: 0;
@@ -289,7 +317,7 @@ hr {
   margin: 60px auto;
   position: relative;
   text-align: center;
-  display: flex; 
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -320,7 +348,6 @@ hr {
 .gift__btn {
   margin-top: 30px;
 }
-
 
 /* ARTICLE ========================================== */
 
@@ -401,8 +428,19 @@ article {
 /* ===FOOTER=== */
 
 /* MEDIA QUERY ======================== */
-
+@media screen and (max-width: 1200px) {
+  .how-you-can-help {
+    margin: 5%;
+  }
+}
 @media screen and (max-width: 1050px) {
+  .text-box1 {
+    padding: 150px 0;
+  }
+  .text-box1 p {
+    margin: 0 5%;
+  }
+
   .news__information {
     margin-right: 7%;
   }
@@ -414,12 +452,39 @@ article {
 }
 
 @media screen and (max-width: 992px) {
+  .text-box1 {
+    padding: 100px 0;
+  }
+
+  .text-box-kitty {
+    margin-top: 0;
+  }
+  .text-box-puppy {
+    margin-top: 0;
+  }
   .news__information {
     margin-right: 5%;
+  }
+  .puppy {
+    background-position: center;
+    background-size: cover;
   }
 }
 
 @media screen and (max-width: 800px) {
+  .how-you-can-help {
+    margin-top: 3%;
+  }
+  .text-box1 {
+    padding: 80px 0;
+  }
+  .how-you-can-help {
+    margin: 45px;
+  }
+  .text-box2 {
+    margin: 0 3%;
+  }
+
   .news__information {
     margin-right: 2%;
   }
@@ -434,6 +499,22 @@ article {
 }
 
 @media screen and (max-width: 768px) {
+  .text-box1 {
+    padding: 50px 0;
+  }
+
+  .kitty {
+    background-position: center;
+    width: 100%;
+    height: 450px;
+  }
+
+  .puppy {
+    background-position: center;
+    width: 100%;
+    height: 450px;
+  }
+
   .news__container::before {
     display: none;
   }
@@ -457,8 +538,63 @@ article {
     width: 100%;
   }
 }
+@media screen and (max-width: 600px) {
+  .how-you-can-help {
+    flex-wrap: wrap;
+  }
+  .happy-dog {
+    width: 100%;
+  }
+  .text-box2 {
+    width: 100%;
+    margin: 2% 0;
+  }
+}
 
 @media screen and (max-width: 450px) {
+  .happy-dog {
+    width: 100%;
+  }
+
+  .how-you-can-help {
+    flex-wrap: wrap;
+    margin: 2%;
+  }
+
+  .happy-dog {
+    margin: 3% 5%;
+  }
+
+  .text-box2 {
+    width: 100%;
+    margin: 3% 5%;
+    text-align: center;
+  }
+
+  .kitty {
+    padding: 35px;
+  }
+
+  .text-box-kitty {
+    margin: 7% 3% 0 3%;
+    font-size: 17pt;
+    line-height: 1.2;
+  }
+
+  .text-box-kitty p {
+    padding: 15px 0 35px 0;
+  }
+
+  .text-box-puppy {
+    margin: 0 3%;
+    font-size: 17pt;
+    line-height: 1.2;
+  }
+
+  .text-box-puppy p {
+    padding: 15px 0 35px 0;
+  }
+
   .gift__title {
     font-size: 35px;
   }
