--- a/css/style.css
+++ b/css/style.css
@@ -11,61 +11,83 @@ body {
   width: 100%;
   height: 100%;
 }
-body {
-  background: #252525;
-}
-.header {
-  width: 100%;
-  height: 1500px;
+header {
   background: url(/assets/images/dog.jpeg);
   background-size: cover;
+  width: 100%;
+  box-shadow: inset 0px 0px 145px 6px rgba(0, 0, 0, 0.85);
+}
+
+.header {
+  width: 90%;
+  margin: auto;
+  height: 800px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.header-top {
   display: flex;
   flex-wrap: wrap;
 }
-.navbar {
-  width: 50%;
-  padding: 20px;
-  top: 0px;
-  transition: 0.5s;
-  text-align: center;
-}
-.navbar a {
-  color: white;
-  text-decoration: none;
-}
-.navbar ul li {
-  list-style-type: none;
-  display: inline-block;
-  padding: 10px 50px;
-  color: white;
-  font-size: 24px;
-  font-family: sans-serif;
-  cursor: pointer;
+
+.toggle ul li:hover {
+  color: #ffcd03;
 }
 
-.navbar ul li:hover {
-  background: orange;
-}
-.btn {
-  float: right;
-  margin-top: 30px;
+.toggle {
   width: 50%;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  color: #fff;
+  font-size: 30px;
 }
+.toggle label {
+  display: none;
+}
+.toggle ul li {
+  display: inline-block;
+
+  color: white;
+  padding: 20px;
+}
+.toggle ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+.btn {
+  position: relative;
+  display: inline-block;
+  width: 40%;
+  margin-top: 30px;
+}
+
+.float-right {
+  float: right;
+}
+
 .donate-btn {
+  display: inline-block;
+  margin-right: 60px;
+}
+
+.donate-link {
   color: white;
   background-color: red;
   font-size: 28px;
   padding: 10px 60px 10px 60px;
   text-decoration: none;
   border-radius: 5px;
-  float: right;
 }
 
-.container {
-  position: absolute;
-  left: 50%;
-  top: 45%;
+.search-container {
+  /* position: absolute; */
   transform: translate(-50%);
+  right: 0;
+  display: inline-block;
+  float: right;
 }
 .search-box input {
   border: none;
@@ -97,7 +119,7 @@ body {
   outline: none;
   color: black;
   background: none;
-  color:red;
+  color: red;
 }
 
 .search-box input:focus + span {
@@ -134,6 +156,182 @@ body {
   transform: rotate(45deg) translate(26px, -2px);
 }
 
+.bottom-container {
+  display: flex;
+  flex-direction: row;  
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.header-title {
+  width: 50%;
+  margin-left:200px;
+  margin-top: -30px;
+
+/*   margin-bottom: -200px; */
+}
+
+.bottom-title {
+  font-size: 90px;
+  color: white;
+  
+
+}
+
+.bg-box-right {
+  width: 50%;
+  
+/*   background-color: black; */
+  z-index: 3;
+}
+
+.text-box {
+  text-align: center;
+  width: 60%;
+  margin: 600px auto;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+.text-box-content {
+  font-size: 60px;
+  color: #243e86;
+}
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+  margin-right: 100px;
+  margin-left: 100px;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 60%;
+  height: 60%;
+}
+
+.link-wrapper {
+  float: right;
+}
+
+.bg-bottom {
+  background: black;
+  padding-bottom: 1rem;
+  position: relative;
+  z-index: 1;
+}
+
+.bg-wrapper {
+  color: #ffffff;
+}
+
+.bg-big {
+  font-family: "freight-sans-pro", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  /*  -webkit-transition: color,0.2s;
+    -moz-transition: color,0.2s; */
+  transition: color, 0.2s;
+  color: #009ed0;
+  font-size: 1rem;
+  letter-spacing: 0.125rem;
+  margin-bottom: 0.1875rem;
+  padding-top: 1.25rem;
+  text-transform: uppercase;
+}
+
+.bg-banning {
+  font-family: "freight-sans-pro", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  color: #ffffff;
+  display: inline;
+  font-size: 1.6875rem;
+  margin: 0.2rem 0;
+  text-align: left;
+}
+
+.bg-save {
+  font-family: "freight-text-pro", serif;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 1.0625rem;
+  line-height: 1.3;
+  margin-bottom: 1.25rem;
+  margin-top: 0.375rem;
+  color: white;
+}
+
+.bottom-container .bg-bottom {
+  background: #171d29;
+  float: right;
+  justify-content: space-between;
+  margin-right: auto;
+}
 /* ===MAIN=== */
 
 /* ===FOOTER=== */
+
+/* MEDIA QUERY */
+@media screen and (max-width: 1400px) {
+  .bottom-title {
+    font-size: 70px;
+  }
+
+  .header-title {
+    margin-bottom: -70px;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  .bottom-title {
+    font-size: 60px;
+  }
+
+  .header-title {
+    margin-bottom: -60px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .bottom-title {
+    font-size: 50px;
+  }
+}
+
+.header-title {
+  margin-bottom: -50px;
+}
+
+@media screen and (max-width: 800px) {
+}
+
+@media screen and (max-width: 768px) {
+  .toggle label {
+    display: inline-block;
+  }
+  .toggle ul {
+    display: none;
+  }
+  .toggle:hover ul {
+    display: block;
+  }
+
+  .toggle {
+    font-size: 55px;
+  
+  }
+
+  .toggle ul li {
+    font-size: 20px;
+  }
+}
+
+
