--- a/css/footer.css
+++ b/css/footer.css
@@ -1,185 +1,159 @@
-* { 
-    vertical-align: baseline; /* for Images */ 
-    box-sizing: border-box;
-    line-height: 1; /* space between text-lines */
-    font: inherit; /* text inherit from parent, */
-    padding: 0; 
+* { 
     margin: 0;
+    box-sizing: border-box;
 }
-
-*:before, *:after { box-sizing: inherit; }
-
-:root { 
-    --f-l-blue: rgba(21, 68, 129, 1);
-    --f-d-blue: rgba(20,43,79);
-    --f-arrow-bg: rgba(0,160,203,1);
-}
-
-html, body {     
+html,body { 
+    font-size: 100%;
     height: 100vh;
     width: 100vw;
-    font-size: 100%; /* required, for rem unints*/
 }
 
-footer { 
-    width: 100%;
-    height: auto;
-    text-decoration: none;
-    list-style:none;
+:root {  
+    --footer-top-bg: rgba(238,238,238); 
+    /*--arrow-blue: #009ed0;*/
+    --alerts-light-blue: #243e86;
+    --alerts-dark-blue: rgba(20,43,79,1);
+    --freight-font: "freight-sans-pro", sans-serif;
+    --blue-text: #243e86;
+    --blue-text-hover: rgba(0,160, 203,1 );
 }
-
-/* gray top footer */
-footer div.footer__top { 
-    height: auto; 
-    /* padding: 1rem 0rem; */ /* 1rem=18px */
-    border: 1px dashed blue;
-    background: rgba(238,238,238,1);
-} 
-
-/* white bottom footer */
-footer div.footer__bottom { 
-    height: auto; 
-    /* padding: 1rem 0rem;  *//* 1rem=18px */
-    border: 1px dashed blue;
-    background: rgba(255,255,255,1);
-} 
-
-/* centered containers */
-div.top__box, div.bottom__box { 
-    margin: 0 auto;
-    height: 100%;
-    width: 85%;
-    padding: 1rem 0rem; /* 1rem=18px */
-    border: 1px dashed blue;
-}
-
-
-/* TOP FOOTER ==>> top__left & top__right boxes */
-
-div.top__box,div.bottom__box { 
-    display: flex;
-    flex-direction: row;
-}
-
-div.f__left,
-div.f__right { 
-    padding: 1em;
-    border: 1px dashed red;
-    margin: 0rem 3rem 0rem 0rem;
-}
-
-div.f__left { 
-    height: auto;
+section.left-box { 
+    padding: 0.001%;
     width: 40%;
-    float: left;
+    
+    /*border: 2px dashed black;*/
+}
+
+
+
+h2 { 
+    display:inline-block;
+    font-weight: bolder;
+    color: var(--blue-text);
+    font-size: 1.2rem;
+}
+
+div.form { 
+    width:100%;
+    margin: 0rem 3rem 0rem 0rem ;
+    /*border: 2px dashed black;*/
+}
+form label{
+    display:block;
+    font-family: var(--freight-font);
+    font-weight: 530;
+    font-size: 0.65rem;
+    font-style: normal;
+}
+form input { 
+    
+    margin: 0rem 0rem .4rem 0rem;
+      border: 1px solid #959595;
+    border-radius: 0;
+    box-shadow: none;
+    font-size: .8125rem;
+    line-height: .8125rem;
+     height: 2rem; 
+    max-width: 100%;
+    padding: .5rem 1rem;
+    width: 100%;
+}
+form input[type="submit"] { 
+    content: '';
+    font-weight: 600;
+    color: white;
+    text-align: left;
+    font-size: 0.8rem;
+    margin-top: .5rem;
+    letter-spacing: .12ex;
+    background-color: #243e86;
+    background-size: 1rem 1rem;
+    background-image: url(/assets/image/arrow.svg);
+    background-position: center right 1rem;
+    background-repeat: no-repeat;
+}
+
+div.mb { 
+    padding: 0.001%;
+    display: flex;
+    align-items:center;
+
+    flex-direction: row;
+    width: 100%;
+}
+div.mb-alerts { 
+    padding: 0.001%;
+    margin-right: 1rem;
+    width: 50%;
+}
+
+div.text-alert {
+    width: 50%;
+    padding: 0.001%; 
+}
+
+p.warning { 
+    padding :0.001%;
+    letter-spacing: 0.03rem;
+    font-family: var(--freight-font);
+    font-size:.7rem;
     
 }
-
-div.f__right { 
-    height: auto;
+/* footer>> leftNAV*/
+section.right-box { 
+    content: '';
     width: 60%;
-    float: right;
-    display: flex;
-    flex-direction: row;
+    /*border: 1px dashed black;*/
 }
 
-/* TOP FOOTER =====> */
-section.form-double { 
-    display :flex;
-    flex-direction: column;
+section.grid-box { 
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4,auto); 
+    grid-auto-flow: row;
 }
 
-section.form-row { 
-    display: flex;
-    flex-direction: row; 
-}
-
-section.form-row { 
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-}
-
-section.form-row-left, section.form-row-right { 
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid purple; 
-}
-/* BOTTOM FOOTER */
-nav.footer-nav {
-    content: ' ';
-    text-align:left;
-    width: 25%;
+nav.item {
+    padding: 1rem;
     display: inline-block;
-
-    border: 1px dashed black;
+    list-style: none;
+    /*border: 1px dashed var(--blue-text);*/
 }
-nav.footer-nav h2 { 
-    padding: 0.001%;
-    margin: 0rem 0rem 1rem 0rem;
-    font-weight: bolder;
+
+nav.item-1 li a { 
+    padding: 0.00001%;
+    font-weight: 999;
+    font-size: 0.7rem;
+    text-decoration: none;
+    color: var(--blue-text);
+}
+
+nav.item h2 {
+    font-size: 0.7rem;
+    font-family: var(--freight-font);
+    color: var(--blue-text);
     text-align:left;
 }
 
-ul.footer__menu { 
-    padding: 0.001%;
-    /*background: black;*/
-    display: flex;
-    flex-direction: row;
+nav.item li  { 
+    text-align:left;
+    padding: 0.00001%;
+    font-weight: 800;
+    text-decoration: none;
+    color: var(--blue-text);
+    font-size: 0.9rem;
+    font-family: var(--freight-font);
 }
 
-li { 
-    list-style:none;
+nav.item-2 li a ,
+nav.item-3 li a , 
+nav.item-4 li a  { 
+    text-align:left;
+    /*padding: 0.00001%;*/
+    font-weight: 100;
+    font-size: 0.7rem;
+    text-decoration: none;
+    color: var(--blue-text);
+    font-family: var(--freight-font);
 }
 
-ul.footer__menu li.menu__item { 
-    margin: 1em;
-    height: auto;
-    width: auto;
-}
-
-li.menu__item[title="facebook"] { 
-   height: 50%;
-   width: 50%;
-   padding: 1rem;
-    background: black;
-    margin: 0.5rem;
-}
-
-li.menu__item[title="twitter"] { 
-    height: 50%;
-    width: 50%;
-    padding: 1em;
-    background: black;
-    margin: 0.5rem;
-}
-
-li.menu__item[title="instagram"] { 
-    height: 50%;
-    width: 50%;
-    padding: 1em;
-    background: black;
-    margin: 0.5rem;
-}
-
-li.menu__item[title="youtube"] { 
-    height: 50%;
-    width: 50%;
-    padding: 1em;
-    background: black;
-    margin: 0.5rem;
-}
-
-li.menu__item[title="snapchat"] { 
-    height: 50%;
-    width: 50%;
-    padding: 1em;
-    background: black;
-    margin: 0.5rem;
-}
-
-div.footer__end { 
-    display: flex;
-    flex-direction: column ;
-}
