--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body {
   margin-left: 6%;
   margin-right: 6%;
 }
+
 .text-box1 p {
   align-self: center;
 }
@@ -116,9 +117,11 @@ body {
 .text-box2-link .fa-arrow-right {
   color: #009ed0;
 }
+
 .box2-link {
   margin: 4% 0;
 }
+
 .kitty-and-puppy {
   display: flex;
   flex-wrap: wrap;
@@ -246,15 +249,15 @@ hr {
 
 .changes {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
 .change {
-  flex: 29%;
-  max-width: 339px;
+  flex: 28%;
+  width: 210px;
   border: 1px solid lightgrey;
-  margin-right: 6.5%;
+  margin-right: 5vw;
 }
 
 .change:last-child {
@@ -265,16 +268,24 @@ hr {
   border-bottom: 2px solid #009ed0;
 }
 
-.change:hover .fa-arrow-right {
+.change:hover #change__btn .fa-arrow-right {
   color: #009ed0;
 }
 
-.change .change__top img {
-  max-width: 100%;
-  min-height: 250px;
+.change .change__top,
+.change .change__body,
+.change .change__body__content,
+.change .change__body .change__bottom {
+  width: 100%;
+  height: auto;
+  border: none;
 }
 
-.change__body a {
+.change .change__top img {
+  width: 100%;
+}
+
+.change .change__body .change__body__content a {
   text-decoration: none;
   color: black;
   line-height: 22px;
@@ -283,20 +294,38 @@ hr {
 .change .change__body {
   margin: 10px 0;
   padding: 0 15px;
-  min-height: 90px;
   text-align: center;
   font-weight: 500;
   line-height: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.change__body .change__body__content {
+  margin: 0;
+  flex: 1;
+  height: 100px;
 }
 
 .change .change__bottom {
   color: #243e86;
-  padding: 0 15px;
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+  text-align: left;
 }
 
-.change .fa-arrow-right {
+#change__btn {
+  flex: 1;
+  border: none;
+  margin-top: 20px;
+}
+
+#change__btn .fa-arrow-right {
   float: right;
   color: lightgrey;
+  font-size: 20px;
   margin-right: 10px;
   margin-bottom: 10px;
 }
@@ -382,13 +411,14 @@ article {
   background-size: cover;
   display: inline-block;
   max-width: 30rem;
-  min-width: 12rem;
-  min-height: 12rem;
+  min-width: 24rem;
   position: absolute;
   left: 0;
   top: 0;
+  right: 0;
+  bottom: 0;
   padding-top: 8.9%;
-  width: 40%;
+  width: 35%;
 }
 
 /* .news__container::after {
@@ -414,6 +444,7 @@ article {
   font-size: 25px;
   max-width: 450px;
   margin: auto;
+  width: 100%;
 }
 
 .news__btn {
@@ -442,23 +473,31 @@ article {
   .how-you-can-help {
     margin: 5%;
   }
+
+  .container {
+    margin: 0 5%;
+  }
+
 }
+
 @media screen and (max-width: 1050px) {
   .text-box1 {
     padding: 150px 0;
   }
+
   .text-box1 p {
     margin: 0 5%;
   }
 
   .news__information {
-    margin-right: 7%;
+    margin-right: 5%;
   }
 
   .text-wrapper {
     padding-left: 0;
     padding-right: 0;
   }
+
 }
 
 @media screen and (max-width: 992px) {
@@ -469,15 +508,31 @@ article {
   .text-box-kitty {
     margin-top: 0;
   }
+
   .text-box-puppy {
     margin-top: 0;
   }
+
   .news__information {
-    margin-right: 5%;
+    margin-right: -40px;
   }
+
+  .news__body {
+    font-size: 22px;
+    width: 70%;
+  }
+
   .puppy {
     background-position: center;
     background-size: cover;
+  }
+
+  .change .change__top img {
+    max-width: 100%;
+  }
+
+  .change__body .change__body__content {
+    height: 120px;
   }
 }
 
@@ -485,18 +540,21 @@ article {
   .how-you-can-help {
     margin-top: 3%;
   }
+
   .text-box1 {
     padding: 80px 0;
   }
+
   .how-you-can-help {
     margin: 45px;
   }
+
   .text-box2 {
     margin: 0 3%;
   }
 
   .news__information {
-    margin-right: 2%;
+    margin-right: -50px;
   }
 
   .gift:after {
@@ -505,6 +563,10 @@ article {
 
   .text-wrapper {
     padding: 100px 20px;
+  }
+
+  .change__body .change__body__content {
+    height: 140px;
   }
 }
 
@@ -547,21 +609,64 @@ article {
   .text-wrapper {
     width: 100%;
   }
+
+  .change__body .change__body__content {
+    height: 90px;
+  }
+
+  .change__body .change__body__content:last-child {
+    height: 30px;
+  }
+
+  .change{
+    flex: 40%;
+  } 
+
+  .change:nth-child(2) {
+    margin-right: 0;
+  }
+
+  .change:last-child {
+    margin-top: 5vw;
+  }
+
+  .change__body .change__body__content {
+    height: 100px;
+  }
+
+  .change__body .change__item3 {
+    height: 20px;
+  }
 }
+
 @media screen and (max-width: 600px) {
   .how-you-can-help {
     flex-wrap: wrap;
   }
+
   .happy-dog {
     width: 100%;
   }
+
   .text-box2 {
     width: 100%;
     margin: 2% 0;
   }
+
+  .news__body {
+    width: 90%;
+  }
+
+  .change__body .change__body__content {
+    height: 120px;
+  }
+
+  .change__body .change__item3 {
+    height: 30px;
+  }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 480px) {
   .happy-dog {
     width: 100%;
   }
@@ -608,4 +713,30 @@ article {
   .gift__title {
     font-size: 35px;
   }
+
+  .change {
+    flex: 100%;
+    margin: 0 0 30px 0;
+  }
+
+  .change:last-child {
+    margin: 0;
+  }
+
+  .change .change__top {
+    margin-bottom: 10px;
+  }
+
+  .change__body .change__body__content {
+    height: 80px;
+  }
+
+  .change__body .change__item2 {
+    height: 60px;
+  }
+
+  .change__body .change__item3 {
+    height: 20px;
+  }
+
 }
