--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ body {
 
 .text-box1 {
   font-style: normal;
-  font-weight: 500;
   font-size: 24pt;
   line-height: 1.6;
   color: white;
@@ -86,17 +85,18 @@ body {
 
 .text-box2 {
   width: 30%;
-  font-size: 20pt;
+  font-size: 26px;
   color: #283941;
   line-height: 1.2;
   align-self: center;
   margin-left: 4%;
+  padding-top: 3%;
 }
 
 .text-box2-link {
   color: #243e86;
   text-decoration: none;
-  font-size: 14pt;
+  font-size: 18px;
 }
 
 .text-box2-link:hover {
@@ -183,7 +183,7 @@ body {
 
 .kitty-button a {
   color: white;
-  font-size: 13pt;
+  font-size: 17px;
   letter-spacing: 1.5px;
   font-weight: 550;
   text-decoration: none;
@@ -198,7 +198,7 @@ body {
 
 .puppy-button a {
   color: white;
-  font-size: 13px;
+  font-size: 17px;
   letter-spacing: 1.5px;
   text-decoration: none;
   padding: 17px 35px;
@@ -549,7 +549,7 @@ article {
   }
   .text-box2 {
     width: 100%;
-    margin: 2% 0;
+    margin-left: 0;
   }
 }
 
