conflict solved/html

--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-html {
-  font-family: "Noto Sans JP", sans-serif;
-}
+
 body {
   font-size: 18px;
 }
@@ -40,6 +38,7 @@ body {
 }
 
 .text-box1 {
+  font-family: "freight-sans-pro", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 24pt;
@@ -98,6 +97,7 @@ body {
   width: 30%;
   font-size: 20pt;
   line-height: 1.2;
+  font-family: "freight-sans-pro", sans-serif;
   align-self: center;
   margin-left: 4%;
 }
@@ -152,6 +152,7 @@ body {
 }
 
 .text-box-kitty {
+  font-family: "freight-sans-pro", sans-serif;
   font-style: normal;
   font-size: 19pt;
   line-height: 1.5;
@@ -172,6 +173,7 @@ body {
 }
 
 .text-box-puppy {
+  font-family: "freight-sans-pro", sans-serif;
   font-style: normal;
   font-size: 19pt;
   line-height: 1.5;
@@ -208,8 +210,9 @@ body {
 
 .puppy-button a {
   color: white;
-  font-size: 13px;
+  font-size: 13pt;
   letter-spacing: 1.5px;
+  font-weight: 550;
   text-decoration: none;
   padding: 17px 35px;
   border-radius: 3px;
@@ -222,9 +225,8 @@ body {
 
 h3 {
   color: #d7ae18;
-  font-size: 20px;
+  font-size: 15pt;
   letter-spacing: 4px;
-  font-weight: 600;
 }
 
 /* DEAN ========================================== */
@@ -412,7 +414,6 @@ article {
   font-size: 25px;
   max-width: 450px;
   margin: auto;
-  font-family: "freight-text-pro", serif;
 }
 
 .news__btn {
@@ -461,9 +462,6 @@ article {
 }
 
 @media screen and (max-width: 992px) {
-  .fox-image {
-    background-position: center;
-  }
   .text-box1 {
     padding: 100px 0;
   }
@@ -589,7 +587,7 @@ article {
 
   .text-box-kitty {
     margin: 7% 3% 0 3%;
-    font-size: 22px;
+    font-size: 17pt;
     line-height: 1.2;
   }
 
@@ -599,7 +597,7 @@ article {
 
   .text-box-puppy {
     margin: 0 3%;
-    font-size: 22px;
+    font-size: 17pt;
     line-height: 1.2;
   }
 
