--- a/css/footer.css
+++ b/css/footer.css
@@ -166,16 +166,16 @@ nav.item-4 li a  { 
 section.left-bottom-box { 
     padding: 0.001%;
     width: 40%;
-    border: 1px dashed blue;
+    /*border: 1px dashed blue;*/
 }
 
 ul { 
     padding: 0.001%;
     display: flex;
     flex-direction: row;
-    /*justify-content: center;*/
-    border: 1px dashed blue;
+    justify-content: center;
     width: 100%;
+    /*border: 1px dashed blue;*/
 }
 li { 
     padding: 0.0001%;
@@ -204,12 +204,12 @@ a.facebook { 
     content: '' ;
     background: transparent url('../assets/image/facebook.png' ) no-repeat top left;
     background-size: 1.75rem;
+    display: inline-block;
     background-position: center;
     background-size: cover;
     width: 1.75rem;
     height: 1.75rem;
     text-decoration: none;
-    display: inline-block;
 }
 
 
@@ -274,11 +274,21 @@ section.right-bottom-box > section.end-box > p { 
     font-weight: 500;
 }
 
+
+section.left-bottom-box { 
+    
+    width: 40%;
+    display: inline-flex;  
+    border: 1px dashed black;  
+    
+}   
+
 /* footer END terms&conditions */   
 section.right-bottom-box { 
-
-    border: 1px dashed black;  
-    display: inline-block;
+    
     width: 60%;  
-
+    display: inline-block;
+    /*margin: 2% 0%;*/
+    border: 1px dashed black;  
+    
 }
