--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
   max-width: 1100px;
   margin: auto;
 }
-
 /* ===HEADER=== */
 
 /* ===MAIN=== */
@@ -43,7 +42,7 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 24pt;
-  margin-bottom: 1rem;
+  line-height: 1.6;
   color: white;
   padding: 300px 0;
   z-index: 1;
@@ -52,14 +51,7 @@ body {
   flex-direction: column;
   text-align: center;
   justify-content: center;
-  text-align: center;
-
-  /*align-items: center;*/
-  margin-left: 6%;
-  margin-right: 6%;
-}
-.text-box1 p {
-  align-self: center;
+  width: 100%;
 }
 
 .text-box1-link {
@@ -71,8 +63,6 @@ body {
 
 .text-box1-link:hover {
   color: #009ed0;
-  font-family: "freight-sans-pro", sans-serif;
-  font-size: 14pt;
 }
 
 .text-box1-link .fa-arrow-right {
@@ -97,6 +87,7 @@ body {
 .text-box2 {
   width: 30%;
   font-size: 20pt;
+  color: #283941;
   line-height: 1.2;
   font-family: "freight-sans-pro", sans-serif;
   align-self: center;
@@ -106,7 +97,6 @@ body {
 .text-box2-link {
   color: #243e86;
   text-decoration: none;
-  background-color: #dfc5de;
   font-size: 14pt;
 }
 
