added margin, enjoy guys

--- a/css/style.css
+++ b/css/style.css
@@ -62,19 +62,17 @@ header {
   font-size: 30px;
 }
 
-.toggle:hover{
-  background-color:#243e86;
+.toggle:hover {
+  background-color: #243e86;
 }
 
-
 .toggle ul li:hover {
-  color:white;
+  color: white;
   background: #ffcd03;
 }
 
 .toggle label {
   display: none;
- 
 }
 .toggle ul li {
   display: inline-block;
@@ -361,6 +359,10 @@ body {
   background-position: top;
   background-size: cover;
   position: relative;
+
+  /* add margin */
+
+  margin-top: 5%;
 }
 
 .fox-image:after {
@@ -814,7 +816,6 @@ article {
   .container {
     margin: 0 5%;
   }
-
 }
 
 @media screen and (max-width: 1050px) {
@@ -834,7 +835,6 @@ article {
     padding-left: 0;
     padding-right: 0;
   }
-
 }
 
 @media screen and (max-width: 992px) {
@@ -955,9 +955,9 @@ article {
     height: 30px;
   }
 
-  .change{
+  .change {
     flex: 40%;
-  } 
+  }
 
   .change:nth-child(2) {
     margin-right: 0;
@@ -1075,9 +1075,7 @@ article {
   .change__body .change__item3 {
     height: 20px;
   }
-
 }
-
 
 /* MEDIA QUERY */
 @media screen and (max-width: 1400px) {
@@ -1126,4 +1124,3 @@ article {
     font-size: 20px;
   }
 }
-
