--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,15 @@
 body {
   font-size: 18px;
 }
-
+html {
+  font-family: 'Noto Sans JP', sans-serif;
+}
 html,
 body {
   width: 100%;
   height: 100%;
+  font-family: 'Noto Sans JP', sans-serif;
+
 }
 
 .container {
